adding some more rewriting work

--- a/rv2015/rv2015_main.tex
+++ b/rv2015/rv2015_main.tex
@@ -105,7 +105,8 @@ We have implemented an embedded, real-time CAN monitor utilizing our monitoring 
 \input{sections/Background}
 \input{sections/Architecture}
 \input{sections/Algorithm}
-\input{sections/Implementation}
+%\input{sections/Implementation}
+\input{sections/Case_Study}
 \input{sections/Conclusion}
 
 
