more writing, added discussion section

--- a/rv2015/sections/Case_Study.tex
+++ b/rv2015/sections/Case_Study.tex
@@ -2,7 +2,7 @@
 
 
 \section{Case Study}
-
+\label{sec:case_study}
 %% paragraph 1 -- experimental environment
 This section reports our case study performing real-time monitoring of a CAN network for realistic safety properties. We have implemented the \monitor algorithm on a low cost ARM-Cortex M4 development board which can be used to monitor CAN networks. For this case study we have obtained CAN network logs from a series of robustness tests on an autonomous research vehicle which we have replayed on a test CAN bus for the monitor to check. This setup is shown in Figure \ref{fig:replaySchem}.
 
